# gen_trade

./: .gitignore  PLAN.md  README.md  claude_assessment.md  gen_trade.allium  openapi.json  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml
gentrade/: __init__.py  async_caller.py  backtest.py  binance_download.py  cli.py  df_adapter.py  env.py  evaluation.py  fitness_functions.py  ga.py  generate_blank_signals.py  generate_strategy.py  genetic.py  helpers.py  ingest.py  load_strategy.py  logger.py  manifest.py  metrics.py  mutation.py  paper.py  persistence.py  profit_calculator.py  run_strategy.py  selection.py  smoke.py  ta_trends.py  walk_forward.py
gentrade/api/: app.py  assets.py  auth.py  export_openapi.py  jobs.py  schemas.py
gentrade/signals/: absolute_signals.json  relative_signals.json
gentrade/ui/: api_client.py  copy.py  format.py  indicator_docs.py  main.py
gentrade/ui/pages/: 1_Runs.py  2_New_Run.py  3_Run_detail.py  4_Strategy_detail.py
scripts/: dev_bars.py  dev_server.sh  dev_ui.sh
tests/: test_api.py  test_async_caller.py  test_backtest.py  test_cli.py  test_ga.py  test_generate_strategy.py  test_genetic.py  test_indicator_docs.py  test_ingest.py  test_load_strategy.py  test_manifest.py  test_metrics.py  test_mutation.py  test_paper.py  test_persistence.py  test_selection.py  test_smoke.py  test_ui_api_client.py  test_ui_format.py  test_walk_forward.py
tests/regression/: test_phase1_baseline.py
