[project]
name = "gentrade"
version = "0.1.0"
description = "Genetic algorithm that evolves technical-indicator-based trading strategies."
authors = [{ name = "Josh Harrison", email = "joshharrison13@gmail.com" }]
license = "MIT"
readme = "README.md"
requires-python = ">=3.11,<3.13"

dependencies = [
    "pandas>=2.1,<3",
    "numpy>=1.26,<2",
    "ta>=0.11",
    "arrow>=1.3",
    "python-binance>=1.0.19",
    "sqlalchemy>=2.0,<3",
    "fastapi>=0.110,<1",
    "uvicorn[standard]>=0.27,<1",
    "pydantic>=2.6,<3",
]

[project.optional-dependencies]
analysis = [
    "matplotlib>=3.8",
    "plotly>=5.18",
    "wordcloud>=1.9",
]
aws = [
    "boto3>=1.34",
]
parallel = [
    "dask[dataframe]>=2024.1",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.6",
    "httpx>=0.27",
]

[project.scripts]
gentrade = "gentrade.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gentrade"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]
